Add functionality for ConceptMap with Mapset and mappings. (#13)
* Add functionality for ConceptMap with Mapset and mappings.
Integrate Lucene ECL updates.
Update FHIR json files.

* Remove comments

* Add test back. Formatting.

* Add commands for test

* Update antlr version to the version used to create ECL.
Add basic unit test for EclToLuceneConverter.