@@ -18,7 +18,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 import org.hl7.fhir.r5.model.BooleanType;
 import org.hl7.fhir.r5.model.Bundle;
@@ -641,7 +640,7 @@ public final class FhirUtilityR5 {
       }
       final String value = concept.getAttributes().get(key);
       // Check for boolean value
-      if (value.equals("true") || value.equals("false")) {
+      if ("true".equals(value) || "false".equals(value)) {
         parameters.addParameter(createProperty(key, Boolean.valueOf(value), false));
       }
       // Check for coding
@@ -663,7 +662,7 @@ public final class FhirUtilityR5 {
     if (properties == null || properties.contains("parent")) {
       for (final ConceptRef parent : relationships.stream()
           .filter(r -> r.getHierarchical() != null && r.getHierarchical()).map(r -> r.getTo())
-          .collect(Collectors.toList())) {
+          .toList()) {
         final Coding coding = new Coding();
         coding.setCode(parent.getCode());
         coding.setSystem(codeSystem.getUrl());
@@ -799,7 +798,11 @@ public final class FhirUtilityR5 {
     cs.setUrl(terminology.getId());
 
     cs.setDate(DateUtility.DATE_YYYY_MM_DD_DASH.parse(terminology.getReleaseDate()));
-    cs.setVersion(terminology.getAttributes().get("fhirVersion"));
+    String version = terminology.getAttributes().get("fhirVersion");
+    if (version == null) {
+      version = terminology.getVersion();
+    }
+    cs.setVersion(version);
     // cs.setId(terminology.getAttributes().get("fhirId"));
     cs.setId(terminology.getId());
     cs.setName(terminology.getName());
@@ -835,26 +838,56 @@ public final class FhirUtilityR5 {
    * @throws Exception the exception
    */
   public static ConceptMap toR5(final Mapset mapset) throws Exception {
+    if (mapset == null) {
+      throw new FHIRServerResponseException(HttpServletResponse.SC_BAD_REQUEST,
+          "Mapset cannot be null", null);
+    }
+
     final ConceptMap cm = new ConceptMap();
+    final Logger logger = LoggerFactory.getLogger(FhirUtilityR5.class);
+
+    // Debug logging for Mapset data
+    logger.info("Converting Mapset: id={}, fromTerminology={}, toTerminology={}", mapset.getId(),
+        mapset.getFromTerminology(), mapset.getToTerminology());
+
+    // Set other fields
     cm.setUrl(mapset.getAttributes().get("fhirUri"));
-    cm.setDate(DateUtility.DATE_YYYY_MM_DD_DASH.parse(mapset.getReleaseDate()));
-    cm.setVersion(mapset.getAttributes().get("fhirVersion"));
-    // cs.setId(terminology.getAttributes().get("fhirId"));
+    // Use the stored FHIR version if available, otherwise use the regular
+    // version
+    cm.setVersion(mapset.getAttributes().containsKey("fhirVersion")
+        ? mapset.getAttributes().get("fhirVersion") : mapset.getVersion());
     cm.setId(mapset.getId());
     cm.setName(mapset.getName());
     cm.setTitle(mapset.getAbbreviation());
-    cm.setPublisher(FhirUtility.getPublisherInfo(mapset.getPublisher()).getName());
+    cm.setPublisher(mapset.getPublisher());
     cm.setStatus(Enumerations.PublicationStatus.ACTIVE);
-    cm.setCopyright(mapset.getAttributes().get("copyright"));
-    cm.addIdentifier(new Identifier().setValue(mapset.getCode()));
-    if (mapset.getAttributes().containsKey("fhirFromTerminologyUri")) {
-      cm.setSourceScope(
-          new UriType(mapset.getAttributes().get("fhirFromTerminologyUri") + "?fhir_vs"));
+    if (mapset.getCode() != null) {
+      cm.addIdentifier(new Identifier().setValue(mapset.getCode()));
     }
-    if (mapset.getAttributes().containsKey("fhirToTerminologyUri")) {
-      cm.setTargetScope(
-          new UriType(mapset.getAttributes().get("fhirToTerminologyUri") + "?fhir_vs"));
+
+    // Set source and target scopes from fromTerminology and toTerminology
+    if (mapset.getFromTerminology() != null) {
+      cm.setSourceScope(new UriType(mapset.getFromTerminology()));
+      logger.info("Set sourceScope from fromTerminology: {}", mapset.getFromTerminology());
+    } else if (mapset.getAttributes().containsKey("sourceScopeUri")) {
+      cm.setSourceScope(new UriType(mapset.getAttributes().get("sourceScopeUri")));
+      logger.info("Set sourceScope from attributes: {}",
+          mapset.getAttributes().get("sourceScopeUri"));
     }
+
+    if (mapset.getToTerminology() != null) {
+      cm.setTargetScope(new UriType(mapset.getToTerminology()));
+      logger.info("Set targetScope from toTerminology: {}", mapset.getToTerminology());
+    } else if (mapset.getAttributes().containsKey("targetScopeUri")) {
+      cm.setTargetScope(new UriType(mapset.getAttributes().get("targetScopeUri")));
+      logger.info("Set targetScope from attributes: {}",
+          mapset.getAttributes().get("targetScopeUri"));
+    }
+
+    // Debug final state
+    logger.info("Converted ConceptMap: id={}, sourceScope={}, targetScope={}", cm.getId(),
+        cm.getSourceScope() != null ? ((UriType) cm.getSourceScope()).getValue() : "null",
+        cm.getTargetScope() != null ? ((UriType) cm.getTargetScope()).getValue() : "null");
 
     return cm;
   }
